--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,7 @@
 ---
-title: "Food and Health"
+title: "Influence of Dietary Patterns on Health and Disease"
 ---
 
-How do dietary patterns influence health and disease? Using data from NNMB survey collected from 2009 - 2012 for nutritional status of rural population,  we seek to examine the relationship between diet and prelevance of lifestyle diseases among adults. Diet patterns impacts health and can pay a major role in life-style diseases like blood-pressue, diabetes and obesity. 
+How do dietary patterns influence health and disease? Using data from NNMB survey collected from 2009 - 2012 for nutritional status of rural population,  we seek to examine the relationship between diet and prelevance of lifestyle diseases among adults. Diet patterns impact health and can pay a major role in life-style diseases like blood-pressue, diabetes and obesity. 
+
+## Will add graphic here 
