--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Influence of Dietary Patterns on Health and Disease"
+title: "Influence of Dietary Patterns on BMI and there by on diseases"
 execute:
   message: false
   warning: false
