--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,4 @@
 ---
-title: "Influence of Dietary Patterns on BMI and there by on diseases"
 execute:
   message: false
   warning: false
@@ -7,7 +6,8 @@ execute:
   cache: true
 ---
 
-```{r}
+
+
 ```{r}
 library(tidyverse)
 
@@ -20,8 +20,10 @@ full_data <- left_join(diet, participants, by = "id")
 
 
 ```
-```{r}
 
+ 
+```{r}
+library(tidyverse)
 
 # Filter and round BMI
 full_data <- full_data %>%
@@ -64,51 +66,29 @@ bmi_macros <- full_data %>%
   ) %>%
   ungroup()
 
-# Plot
+# Plot with BMI category lines and lower-positioned labels
 p <- ggplot(bmi_macros, aes(x = bmi_round, y = avg_percent, fill = macronutrient)) +
   geom_bar(stat = "identity") +
-  scale_x_continuous(breaks = seq(12, 40, by = 2)) +
+  geom_vline(xintercept = 25, linetype = "dashed", color = "red", size = 0.8) +
+  geom_vline(xintercept = 30, linetype = "dashed", color = "blue", size = 0.8) +
+  scale_x_continuous(breaks = seq(12, 40, by = 2), limits = c(12, 40)) +
   labs(
-    title = "Breakdown of macronutrients by BMI",
-    subtitle = "Higher BMI individuals have higher carb, high fat diets",
-    x = "BMI",
+    title = "Breakdown of Macronutrients by BMI",
+    subtitle = "Higher BMI individuals have lower carb, higher fat diets",
+    x = "BMI (Body Mass Index)",
     y = "Percent of Calories",
-    fill = "Macronutrient",
-    caption = "Source: Diet and nutritional status from 2011 [Global Dietary Database](https://globaldietarydatabase.org/management/microdata-surveys/653)"
+    fill = "Macronutrient\n(BMI ≥ 25: Overweight,\n BMI ≥ 30: Obese)",
+    caption = "2011 Diet and nutritional survey from Global Dietary Database"
   ) +
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
-# Add horizontal lines at each macronutrient boundary
-for (nutrient in levels(bmi_macros$macronutrient)) {
-  line_data <- bmi_macros %>%
-    filter(macronutrient == nutrient) %>%
-    select(bmi_round, lower_bound)
-  
-  p <- p + geom_line(
-    data = line_data,
-    aes(x = bmi_round, y = lower_bound),
-    inherit.aes = FALSE,
-    color = "black",
-    size = 0.6
-  )
-}
-
-# Add top boundary line at 100%
-p <- p + geom_line(
-  data = tibble(bmi_round = unique(bmi_macros$bmi_round), y = 100),
-  aes(x = bmi_round, y = y),
-  inherit.aes = FALSE,
-  color = "black",
-  size = 0.6
-)
-
-# Display plot
 p
-
 
 ```
 
-How do dietary patterns influence health and disease? Using data from NNMB survey collected from 2009 - 2012 for nutritional status of rural population,  we seek to examine the relationship between diet and prelevance of lifestyle diseases among adults. Diet patterns impact health and can pay a major role in life-style diseases like blood-pressue, diabetes and obesity. 
+**What can dietary patterns tells us? **
 
- 
+Using data from the NNMB (National Nutrition Monitoring Bureau) survey (2009–2012) on rural nutritional status, we examine the relationship between food composition(what people eat) and BMI (Body Mass Index). Since BMI is a known marker for lifestyle diseases such as hypertension, diabetes, and obesity, this analysis explores how dietary patterns relate to these health risks.
+
+<!--How do dietary patterns influence health and disease? Using data from NNMB survey collected from 2009 - 2012 for nutritional status of rural population,  we seek to examine the relationship between diet and prelevance of lifestyle diseases among adults. Diet patterns impact health and can pay a major role in life-style diseases like blood-pressue, diabetes and obesity. -->
