--- a/about.qmd
+++ b/about.qmd
@@ -2,8 +2,8 @@
 title: "About"
 ---
 
-This project came about due to [my](https://github.com/uravat/) interest in data science and food and health. 
+This project came about due to [my](https://github.com/uravat/) interest in data science and food and health. I'm curious to figure out **How  dietary patterns influence health and disease?** 
 
-How do dietary patterns influence health and disease? Curious? Check [here](https://github.com/uravat/food-and-health) to see my explorations into **What can dietary patterns tells us?**  Email me if interested uma.ravat.ucsb@gmail.com
+To begin I am looking at what people eat. Curious? Check [here](https://github.com/uravat/food-and-health)  to see my explorations into **What can dietary patterns tells us?**  Email me if interested uma.ravat.ucsb@gmail.com
 
 I have created this project website as a part of [Kane’s Data Science Bootcamp](https://bootcamp.davidkane.info/).
